--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,7 @@ version = "0.1.0"
 authors = ["Lynn Cyrin <firemagelynn@gmail.com>"]
 
 [dependencies]
+wasm-bindgen = "0.2.4"
+
+[profile.release]
+debug = true
