--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,9 @@ name = "galaxy_gen"
 version = "0.1.0"
 authors = ["Lynn Cyrin <firemagelynn@gmail.com>"]
 
+[lib]
+crate-type = ["cdylib"]
+
 [dependencies]
 wasm-bindgen = "0.2.4"
 
