--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build-release": "cargo +nightly build --release --target wasm32-unknown-unknown && wasm-bindgen target/wasm32-unknown-unknown/release/galaxy_gen.wasm --out-dir client/assets/built-wasm"
   },
   "devDependencies": {
+    "@types/node": "^9.6.6",
     "webpack": "^3",
     "@angular/common": "^5.2.10",
     "@angular/compiler": "^5.2.10",
