Revert "angularjs boilerplate"
This reverts commit 8be224f785fcd227d05f682add579f22c6f47909.

--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,5 @@
 **/*.rs.bk
 node_modules
 *.wasm
-client/assets/built-wasm/*.js
-client/assets/built-wasm/*.wasm
+client/built-wasm/*.js
+client/built-wasm/*.wasm
