--- a/package.json
+++ b/package.json
@@ -1,10 +1,18 @@
 {
+  "name": "galaxy_gen",
+  "version": "0.0.0",
+  "engines": {
+    "node": "9.5.0",
+    "npm": "5.8.0"
+  },
   "scripts": {
-    "serve": "webpack-dev-server",
+    "start": "webpack-dev-server",
     "build-debug": "cargo +nightly build --target wasm32-unknown-unknown && wasm-bindgen target/wasm32-unknown-unknown/debug/galaxy_gen.wasm --out-dir built-wasm",
     "build-release": "cargo +nightly build --release --target wasm32-unknown-unknown && wasm-bindgen target/wasm32-unknown-unknown/release/galaxy_gen.wasm --out-dir built-wasm"
   },
   "devDependencies": {
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.2.0",
     "webpack": "^4.0.1",
     "webpack-cli": "^2.0.10",
     "webpack-dev-server": "^3.1.0"
