--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,5 +9,8 @@ crate-type = ["cdylib"]
 [dependencies]
 wasm-bindgen = "0.2.5"
 
+[dev-dependencies]
+cargo-watch = "6.0.0"
+
 [profile.release]
 debug = true
