--- a/package.json
+++ b/package.json
@@ -5,14 +5,11 @@
     "node": "9.5.0",
     "npm": "5.8.0"
   },
-  "scripts": {
-    "start": "webpack-dev-server",
-    "build-debug": "cargo +nightly build --target wasm32-unknown-unknown && wasm-bindgen target/wasm32-unknown-unknown/debug/galaxy_gen.wasm --out-dir built-wasm",
-    "build-release": "cargo +nightly build --release --target wasm32-unknown-unknown && wasm-bindgen target/wasm32-unknown-unknown/release/galaxy_gen.wasm --out-dir built-wasm"
-  },
   "devDependencies": {
+    "concurrently": "^3.5.1",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
+    "nodemon": "^1.17.3",
     "webpack": "^4.0.1",
     "webpack-cli": "^2.0.10",
     "webpack-dev-server": "^3.1.0"
