--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
     "npm": "5.8.0"
   },
   "devDependencies": {
-    "concurrently": "^3.5.1",
-    "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
-    "nodemon": "^1.17.3",
+    "jasmine": "^3.1.0",
+    "karma": "^2.0.2",
+    "karma-firefox-launcher": "^1.1.0",
+    "karma-spec-reporter": "0.0.32",
     "ts-loader": "^4.2.0",
     "tslint": "^5.9.1",
     "typescript": "^2.8.3",
