--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
     "npm": "5.8.0"
   },
   "devDependencies": {
+    "@types/node": "^9",
     "html-webpack-plugin": "^3.2.0",
     "jasmine": "^3.1.0",
     "karma": "^2.0.2",
     "karma-firefox-launcher": "^1.1.0",
+    "karma-jasmine": "^1.1.1",
     "karma-spec-reporter": "0.0.32",
+    "karma-typescript": "^3.0.12",
     "ts-loader": "^4.2.0",
     "tslint": "^5.9.1",
     "typescript": "^2.8.3",
