those hot, hot reloads

--- a/package.json
+++ b/package.json
@@ -19,6 +19,6 @@
     "typescript": "^2.8.3",
     "webpack": "^4.0.1",
     "webpack-cli": "^2.0.10",
-    "webpack-dev-server": "^3.1.0"
+    "webpack-serve": "^0.3.1"
   }
 }
