--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "@types/node": "^10.0.8",
     "@types/webassembly-js-api": "0.0.1",
     "html-webpack-plugin": "^3.2.0",
+    "jasmine-core": "^3.1.0",
+    "karma": "^2.0.2",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-jasmine": "^1.1.2",
+    "karma-webpack": "^3.0.0",
     "ts-loader": "^4.3.0",
     "tslint": "^5.10.0",
     "typescript": "^2.8.3",
