--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "karma": "^2.0.2",
     "karma-chrome-launcher": "^2.2.0",
     "karma-jasmine": "^1.1.2",
+    "karma-spec-reporter": "0.0.32",
     "karma-webpack": "^3.0.0",
     "ts-loader": "^4.3.0",
     "tslint": "^5.10.0",
