--- a/package.json
+++ b/package.json
@@ -6,18 +6,16 @@
     "npm": "6.0.0"
   },
   "devDependencies": {
-    "@types/jasmine": "^2.8.7",
     "@types/node": "^10.0.8",
     "@types/webassembly-js-api": "0.0.1",
     "html-webpack-plugin": "^3.2.0",
-    "jasmine-core": "^3.1.0",
-    "jasmine-expect-count": "^1.1.0",
     "karma": "^2.0.2",
     "karma-chrome-launcher": "^2.2.0",
-    "karma-jasmine": "^1.1.2",
+    "karma-mocha": "^1.3.0",
     "karma-spec-reporter": "0.0.32",
     "karma-typescript": "^3.0.12",
     "karma-webpack": "^3.0.0",
+    "mocha": "^5.1.1",
     "ts-loader": "^4.3.0",
     "tslint": "^5.10.0",
     "typescript": "^2.8.3",
