--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "npm": "6.0.0"
   },
   "devDependencies": {
+    "@types/mocha": "^5.2.0",
     "@types/node": "^10.0.8",
     "@types/webassembly-js-api": "0.0.1",
     "html-webpack-plugin": "^3.2.0",
