--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["Lynn Cyrin <firemagelynn@gmail.com>"]
 
 [lib]
 crate-type = ["cdylib"]
+path = "src/rust/lib.rs"
 
 [dependencies]
 wasm-bindgen = "0.2.5"
