--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@types/mocha": "^5.2.0",
     "@types/node": "^10.0.8",
     "@types/webassembly-js-api": "0.0.1",
+    "concurrently": "^3.5.1",
     "html-webpack-plugin": "^3.2.0",
     "karma": "^2.0.2",
     "karma-chrome-launcher": "^2.2.0",
