--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,10 +8,10 @@ crate-type = ["cdylib"]
 path = "src/rust/lib.rs"
 
 [dependencies]
-wasm-bindgen = "0.2.5"
+wasm-bindgen = "^0.2"
 
 [dev-dependencies]
-cargo-watch = "6.0.0"
+cargo-watch = "^6"
 
 [profile.release]
 debug = true
