--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ path = "src/rust/lib.rs"
 
 [dependencies]
 wasm-bindgen = "^0.2"
+wasm-bindgen-cli = "^0.2"
 
 [dev-dependencies]
 cargo-watch = "^6"
