--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/node": "^10.0.8",
     "@types/webassembly-js-api": "0.0.1",
     "concurrently": "^3.5.1",
+    "copy-webpack-plugin": "^4.5.1",
     "html-webpack-plugin": "^3.2.0",
     "karma": "^2.0.2",
     "karma-chrome-launcher": "^2.2.0",
@@ -29,6 +30,7 @@
     "tslint": "^5.10.0",
     "typescript": "^2.8.3",
     "webpack": "^4.8.3",
+    "webpack-cli": "^2.1.3",
     "webpack-serve": "^1",
     "zone.js": "^0.8.26"
   }
