--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/webassembly-js-api": "0.0.1",
     "concurrently": "^3.5.1",
     "copy-webpack-plugin": "^4.5.1",
+    "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
     "karma": "^2.0.2",
     "karma-chrome-launcher": "^2.2.0",
