--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
     "node": "10.0.4",
     "npm": "6.0.0"
   },
+  "scripts": {
+    "build": "webpack-cli --config src/js/webpack.config.js --mode production",
+    "start": "node src/js/express.js"
+  },
   "devDependencies": {
     "@angular/common": "^6.0.0",
     "@angular/compiler": "^6.0.1",
@@ -32,5 +36,8 @@
     "webpack-cli": "^2.1.3",
     "webpack-serve": "^1",
     "zone.js": "^0.8.26"
+  },
+  "dependencies": {
+    "express": "^4.16.3"
   }
 }
