--- a/.cargo/config
+++ b/.cargo/config
@@ -1,5 +1,5 @@
 # https://doc.rust-lang.org/cargo/reference/config.html
 
 [build]
-target = "wasm32-unknown-unknownERRORNOTFOUND"
+target = "wasm32-unknown-unknown"
 
