--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,8 +2,11 @@
 
 [package]
 name = "galaxy_gen"
+description = "{ rust => wasm => js } galaxy generation simulation"
+repository = "https://github.com/lynncyrin/galaxy-gen"
 version = "0.1.0"
 authors = ["Lynn Cyrin <firemagelynn@gmail.com>"]
+license = "AGPL"
 
 [lib]
 crate-type = ["cdylib"]
