fix deploy command

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ script:
 deploy:
   skip-cleanup: true
   provider: script
-  script: bin/build-wasm-pack.sh
+  script: bash bin/build-wasm-pack.sh
   on:
     branch: main
 
