--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 # https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [package]
-name = "galaxy_gen"
+name = "galaxy_gen_backend"
 description = "{ rust => wasm => js } galaxy generation simulation"
 repository = "https://github.com/lynncyrin/galaxy-gen"
 version = "0.1.0"
