--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -12,6 +12,6 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-      # https://www.rust-lang.org/tools/install
+      - uses: actions/checkout@v3
       - run: curl -sSf https://sh.rustup.rs | sh -s -- -y
       - run: cargo build
