--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,9 +8,6 @@ version = "0.0.1"
 authors = ["Kai Siren <coilysiren@gmail.com>"]
 license = "AGPL"
 
-[features]
-default-features = ["console_error_panic_hook", "wee_alloc"]
-
 [lib]
 crate-type = ["cdylib"]
 path = "src/rust/lib.rs"
@@ -20,13 +17,11 @@ specs = "^0.12"
 specs-derive = "^0.2"
 rand = "^0.5"
 wasm-bindgen = "^0.2"
-cfg-if = "^0.1"
-console_error_panic_hook = { version = "^0.1", optional = true }
-wee_alloc = { version = "^0.4", optional = true }
+wasm-pack = "^0.12"
+getrandom = { version = "^0.2", features = ["js"] }
 
 [dev-dependencies]
 cargo-watch = "^7"
-wasm-pack = "^0.4"
 
 [profile.release]
 debug = true
