--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -18,5 +18,5 @@ jobs:
       - run: cargo check
       - run: cargo test
       - run: pip install tomlq
-      - run: cargo install wasm-pack --version $(tomlq -r '.package[] | select(.name == "wasm-pack") .version' Cargo.lock)
+      - run: cargo install wasm-pack
       - run: wasm-pack build --target web
