--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,11 +13,10 @@ crate-type = ["cdylib", "rlib"]
 path = "src/rust/lib.rs"
 
 [features]
-default = ["console_error_panic_hook", "wee_alloc"]
+default = ["console_error_panic_hook"]
 
 [dependencies]
 console_error_panic_hook = { version = "^0.1", optional = true }
-wee_alloc = { version = "^0.4", optional = true }
 specs = "^0.12"
 specs-derive = "^0.2"
 rand = "^0.5"
