--- a/package.json
+++ b/package.json
@@ -1,13 +1,11 @@
 {
   "name": "galaxy_gen_client",
   "version": "0.0.1",
+  "scripts": {
+    "build": "webpack --config webpack.config.js",
+    "start": "webpack-dev-server"
+  },
   "devDependencies": {
-    "@angular/common": "^6.1.7",
-    "@angular/compiler": "^6.1.7",
-    "@angular/core": "^6.1.7",
-    "@angular/http": "^6.1.7",
-    "@angular/platform-browser": "^6.1.7",
-    "@angular/platform-browser-dynamic": "^6.1.7",
     "@types/node": "^10.9.4",
     "@types/webassembly-js-api": "0.0.1",
     "ajv": "^6.5.3",
@@ -18,9 +16,12 @@
     "ts-loader": "^4.5.0",
     "tslint": "^5.11.0",
     "typescript": "^2.9.2",
-    "webpack": "^4.18.0",
-    "webpack-cli": "^3.1.0",
     "webpack-serve": "^1.0.4",
-    "zone.js": "^0.8.26"
+    "zone.js": "^0.8.26",
+    "hello-wasm-pack": "^0.1.0",
+    "webpack": "^4.29.3",
+    "webpack-cli": "^3.1.0",
+    "webpack-dev-server": "^3.1.5",
+    "copy-webpack-plugin": "^5.0.0"
   }
 }
