--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "files": ["src/js/bootstrap.js"],
+  "files": ["src/js/index.js"],
   "compileOnSave": true,
   "compilerOptions": {
     "listEmittedFiles": true,
@@ -9,6 +9,8 @@
     "alwaysStrict": true,
     "sourceMap": true,
     "inlineSources": true,
+    "esModuleInterop": true,
+    "jsx": "react",
     "module": "commonjs",
     "outDir": "./dist/out-tsc",
     "declaration": false,
