--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/webassembly-js-api": "^0.0.1",
     "babel-loader": "^9.1.3",
     "copy-webpack-plugin": "^5.1.2",
+    "crypto-browserify": "^3.12.0",
     "css-loader": "^6.8.1",
     "d3": "^7.8.5",
     "galaxy_gen_backend": "file:pkg",
